# 3DASCII

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  randomSnippets.txt
.github/workflows/: build-release.yml  macos-build.yml
_old-include/: Scene.hpp  SceneSettings.hpp  multifloat.hpp  ui.hpp
_old-include/ui/: sceneSettingsMenu.hpp
_old-src/: Light.cpp  main.cpp  model.cpp
assets/shaders/: testv.vert
assets/shaders/frag/: test.frag
assets/shaders/vert/: test.vert
include/: Light.hpp  RenderContext.hpp  Scene.hpp  SceneObject.hpp  SceneSettings.hpp  Transform.hpp  camera.hpp  components.hpp  errorHandle.hpp  float3.hpp  image.hpp  managers.hpp  model.hpp  modelHandling.hpp  multifloat.hpp  renderHandling.hpp  rendercomponents.hpp  systems.hpp  textBrightnessArray.hpp  ui.hpp
include-test/: managers.hpp
include-test/ecss-templates/: signature.hpp  system.hpp
include-test/managers/: Coordinator.hpp  SystemManager.hpp
include/components/: Camera.hpp  Color.hpp  ID.hpp  Light.hpp  MeshData.hpp  MeshGPU.hpp  Model.hpp  Transform.hpp
include/contexts/: RenderContext.hpp
include/ecss-templates/: component.hpp  system.hpp
include/managers/: AssetManager.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  EventBus.hpp  ShaderManager.hpp  SystemManager.hpp
include/rendercomponents/: IndexBuffer.hpp  Shader.hpp  ShaderProgram.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/systems/: ASCIIRenderSystem.hpp  RenderSystem.hpp  UISystem.hpp
include/ui/: assetBrowser.hpp  inspectorMenu.hpp  mouseLogic.hpp  sceneViewer.hpp  toolbar.hpp
lib/glad/include/glad/: gl.h
old-include/: Model.hpp
old-src/: image.cpp  ui.cpp
release/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
release/.cmake/api/v1/reply/: cache-v2-02a4c5bda4fa248adc2b.json  cache-v2-1529fe67b6db3e3ca583.json  cache-v2-514ebd1deb948da7d324.json  cache-v2-8f8642ea34c187186668.json  cmakeFiles-v1-65b2c8e1c6fa348b4c8d.json  cmakeFiles-v1-7034245e9c0a56c78021.json  cmakeFiles-v1-b1e99725175a286ceb28.json  cmakeFiles-v1-b6cb8e6523efca79170a.json  codemodel-v2-3d78fa1c7d108aeb2d19.json  codemodel-v2-704ab5434cc5e17bc2a1.json  codemodel-v2-98ca6b8657831285e04a.json  codemodel-v2-f31c505b66211baaf329.json  codemodel-v2-fd351ba218b544248682.json  directory-_deps.flac-build-Release-0bef0dc5f4e5d727fa3d.json  directory-_deps.flac-build.microbench-Release-deb6dffa113cce99ce30.json  directory-_deps.flac-build.src-Release-b63f50bfde5f45ac1ccc.json  directory-_deps.flac-build.src.libFLAC-Release-4d71f28dfda40b509c63.json  directory-_deps.freetype-build-Release-0fe01e474ab290bcb9f4.json  directory-_deps.imgui-sfml-build-Release-8f257a8c8dd9993901dd.json  directory-_deps.ogg-build-Release-ba3679a9163338842a97.json  directory-_deps.sdl3-build-Release-dbf6bf113aa8d5923bd7.json  directory-_deps.sfml-build-Release-4a7006280833f451ff4b.json  directory-_deps.sfml-build.src.SFML-Release-d15b1cebcd23730e18ac.json  directory-_deps.sfml-build.src.SFML.Audio-Release-bd21e74e48ea5cc335bf.json  directory-_deps.sfml-build.src.SFML.Graphics-Release-5da78d5a63a3c7306475.json  directory-_deps.sfml-build.src.SFML.Main-Release-9b2da4466d34a60c74cc.json  directory-_deps.sfml-build.src.SFML.Network-Release-825225625a09b02d81d5.json  directory-_deps.sfml-build.src.SFML.System-Release-450d27144f6ba032a0ba.json  directory-_deps.sfml-build.src.SFML.Window-Release-b18622d0ad697b0d6562.json  directory-_deps.vorbis-build-Release-2d04fffc4e2e2a83d0d9.json  directory-_deps.vorbis-build.lib-Release-b0a9fd18faea68f4b195.json  index-2025-06-09T13-42-17-0528.json  index-2025-06-10T14-51-45-0938.json  index-2025-06-13T19-14-12-0453.json  index-2025-06-15T18-45-59-0943.json  index-2025-06-17T07-37-16-0624.json  index-2025-06-20T06-07-57-0365.json  target-3DASCII-Release-25933d24fa4bc793aafb.json  target-3DASCII-Release-5e636e87c066875bce91.json  target-3DASCII-Release-7ce9315c2945b986190f.json  (+19 more)
src/: Light.cpp  assetBrowser.cpp  camera.cpp  image.cpp  inspectorMenu.cpp  main.cpp  model.cpp  mouseLogic.cpp  multifloat.cpp  renderHandling.cpp  sceneSettingsMenu.cpp  sceneViewer.cpp  toolbar.cpp  ui.cpp
src-old/: mouseLogic.cpp  renderHandling.cpp  sceneSettingsMenu.cpp
src-test/: main.cpp  managers.cpp
src-test/core/managers/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  EventBus.cpp
src/core/: main.cpp
src/core/managers/: AssetManager.cpp  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  ShaderManager.cpp  SystemManager.cpp
src/rendercomponents/: IndexBuffer.cpp  Shader.cpp  ShaderProgram.cpp  VertexArray.cpp  VertexBuffer.cpp
src/systems/: ASCIIRenderSystem.cpp  RenderSystem.cpp  UISystem.cpp
